<resources>
    <string name="app_name">inVIG - Videos App</string>
    <string name="title_activity_main">MainActivity</string>
    <string-array name="payments_methodes">
        <item>PayPal</item>
        <item>MasterCard</item>
        <item>Visa</item>
        <item>Skill</item>
    </string-array>
    <string name="facebook_app_id">285063729573081</string>
    <string name="fb_login_protocol_scheme">fb285063729573081</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_infos"><![CDATA[Report bug & Help]]></string>
    <string name="error_short_value">Your field is too short</string>
    <string name="error_mail_valide">Please enter a valid E-mail</string>
    <string name="message_sended">Message has been sent successfully</string>
    <string name="progress_login">Work in progress</string>
    <string name="policy_privacy">Policy privacy</string>
    <string name="action_rate">Rate App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_label">Choose your languages</string>
    <string name="loading_language">Loading Languages ...</string>
    <string name="error_server">Check your internet connexion</string>
    <string name="try_again">Try agin</string>
    <string name="favorite">Favorite</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="more_status">MORE STATUS</string>
    <string name="permission_desc">Now we need your permission to continue use the application perfectly</string>
    <string name="permission_title">Permission Required</string>
    <string name="menu_popular">Popular</string>
    <string name="menu_latest">Latest</string>
    <string name="upload_image">Upload Image</string>
    <string name="edit_text_upload_title_error">Title very short , please a write correct title</string>
    <string name="image_upload_error">Please select an image</string>
    <string name="video_upload_error">Please select an image</string>
    <string name="gif_upload_error">Please select an image</string>
    <string name="image_upload_success">Your image has been successfully uploaded</string>
    <string name="video_upload_success">Your video has been successfully uploaded</string>
    <string name="status_upload_success">Your Status has been successfully added</string>
    <string name="status_copied_success">Your Status has been successfully copied</string>
    <string name="gif_upload_success">Your GIF has been successfully added</string>
    <string name="no_connexion">Connection problem</string>
    <string name="retry">Retry</string>
    <string name="upload_gif">Upload GIF</string>
    <string name="please_login">Login to your account</string>
    <string name="welcome_login">Login to use More</string>
    <string name="welcome_login_text">Login to upload , image ,video ....</string>
    <string name="operation_progress">Operation in progress</string>
    <string name="account_disabled">Sorry your account has been locked</string>
    <string name="login_gg_text">Login with google</string>
    <string name="message_logout">You are successfully logout</string>
    <string name="more_jokes">MORE JOKES</string>
    <string name="more_images">MORE IMAGES</string>
    <string name="more_gifs">MORE GIFS</string>
    <string name="more_videos">MORE VIDEOS</string>
    <string name="update_now">Update Now</string>
    <string name="exit">Exit</string>
    <string name="go_pro">GO PRO</string>
    <string name="hint_message">Your message</string>
    <string name="send_support">Send Message</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_name">Full name</string>
    <string name="about_us">About us</string>
    <string name="version_label">Version</string>
    <string name="title_notification">Enable push notification</string>
    <string name="label_notification">Receive push notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="label_cache">Clear locally cached statuses. Currently : </string>
    <string name="contact_us">Contact us</string>
    <string name="download_more_from_link">Download more from inVIG -> https://play.google.com/store/apps/details?id=com.invig.indiastatusapp  </string>
    <string name="upload_video">Upload Video</string>
    <string name="share_as_image">Share \n as image</string>
    <string name="share_as_text">Share \n as text</string>
    <string name="copy_status">Copy \n status</string>
    <string name="add_to_favorite">Add to \n favorites</string>
    <string name="copy_joke">Copy \n  Joke</string>
    <string name="comment">Comment</string>
    <string name="write_comment">Write comment</string>
    <string name="comment_hidden">Comment Hidden</string>
    <string name="now_time">Now</string>
    <string name="all_categories">Show all</string>
    <string name="all_categories_gif">All Gifs Categories</string>
    <string name="all_categories_video">All statuses Categories</string>
    <string name="all_categories_status">All Status Categories</string>
    <string name="all_categories_jokes">All Joke Categories</string>
    <string name="all_categories_images">All Images categories</string>
    <string name="loading">Loading</string>
    <string name="invalide_url">Invalid Url</string>
    <string name="loading_user_data">Loading user data</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="hint_facebook">Facebook url</string>
    <string name="hint_twitter">Twitter url</string>
    <string name="hint_instragram">Instagram Url</string>
    <string name="save">Save</string>
    <string name="menu_me">Me</string>
    <string name="comments">  Comments</string>
    <string name="skip">Skip</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="rate_our_app_message">If you love our application ,please take a moment to rate it .</string>
    <string name="rate_now">Rate Now</string>
    <string name="later">Later</string>
    <string name="no_again">Don’t ask again</string>
    <string name="description_subsribte">With our pack. You can enjoy an ad-free experience . and focus on the  essential!</string>
    <string name="select_language">Select your Languages</string>
    <string name="on_review">On review</string>
    <string name="title_slide_1">Welcome to inVIG - Status App</string>
    <string name="description_slide_1">Thank you for downloading inVig.Download and share videos,images,quotes erc</string>
    <string name="title_slide_2">Follow inVIGers</string>
    <string name="description_slide_2">Follow your favorite inVIGers, download and favorite their content</string>
    <string name="title_slide_3">Share your content </string>
    <string name="description_slide_3">Register now and share you creative content with many users and be one of the inVIGer .</string>
    <string name="title_slide_4">Download and share</string>
    <string name="description_slide_4">Download Any content and keep it on your device to watch it on offline mode , and share it with your frients  </string>
    <string name="title_slide_5">Favorites</string>
    <string name="description_slide_5">Create your favorite list and save any content to view it later . </string>
    <string name="title_slide_6">Give your Reactions </string>
    <string name="description_slide_6">Browse best status collection  and give your reaction like,love, haha , lool , angry ...</string>
    <string name="title_slide_8">Check Your Followers!</string>
    <string name="description_slide_8">Sign in with google or facebook and keep track of your followers and content.</string>
    <string name="share_this_app">Share this App</string>
    <string name="images_downloaded">Video has been downloaded successfully</string>
    <string name="twitter_not_installed">Twitter have not been installed</string>
    <string name="app_not_installed">No App installed</string>
    <string name="share_via">Shared via</string>
    <string name="downloading">Downloading</string>
    <string name="instagram_not_installed">Instagram have not been installed</string>
    <string name="hike_not_installed">Hike have not been installed</string>
    <string name="snapchat_not_installed">Snapshat have not been installed</string>
    <string name="messenger_not_installed">Messenger have not been installed</string>
    <string name="facebook_not_installed">Facebook have not been installed</string>
    <string name="whatsapp_not_installed">Whatsapp have not been installed</string>
    <string name="download_failed">Download failed! Please check your internet connection and try again</string>
    <string name="my_profile">My Profile</string>
    <string name="menu_follow">Follow</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="downloaded_video">Downloaded statuses</string>
    <string name="dialog_text_no_ads_title">Turn Off ads</string>
    <string name="dialog_text_no_premium_wallpapers_title">Premium Content</string>
    <string name="dialog_text_no_premium_wallpapers_description">Get unlimited wallpapers</string>
    <string name="dialog_text_no_ads_description">Use App more free without ads</string>
    <string name="subscribe">Subscribe</string>
    <string name="Logout">Logout</string>
    <string name="login">Login / Register</string>
    <string name="save_successful_message">Saved To Gallery!</string>
    <string name="save_error_message">Could not save,Try again later</string>
    <string name="whatsapp_saver">Whatsapp Status Saver</string>
    <string name="write_quote">Write Quote</string>
    <string name="my_earning">My Earning</string>
    <string name="reference_code_copied">Your Reference code has been copied</string>
    <string name="hint_payemnts">Payment account infos</string>
    <string name="send_request">Send Request</string>
    <string name="request_withdrawal">Request withdrawal</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="FACEBOOK_ADS_INTERSTITIAL_PLACEMENT_ID">606730409961945_606735506628102</string>
    <string name="downloads">Downloads</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="subscriptons">Subscriptions</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="upload_youtube">Upload Youtube</string>
    <string name="upload_video_thumbnail">Upload Thumbnail(optional)</string>
    <string name="upload_youtube_video">Upload Youtube Video</string>
    <string name="edit_text_upload_youtube_invalidate">The Youtube link is incorrect</string>
    <string name="youtube_upload_success">Your Youtube video has been successfully uploaded</string>
    <string name="report_status">Report status</string>
    <string name="delete">Delete</string>
    <string name="post_delete_success">Status has been deleted successfully</string>
    <string name="post_delete_failed">The Requested Operation has failed</string>
    <string name="confirm_delete">Do you really want to delete this status ?</string>
    <string name="delete_statsu">Delete Status</string>
    <string name="title_activity_login2">LoginActivity2</string>
</resources>