<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/comment_bg"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/edit_text_bg">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@color/kesari" />

                    <RelativeLayout
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerHorizontal="true">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image_view_edit_activity_user_profile"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:padding="8dp"
                            android:src="@drawable/profile" />

                        <RelativeLayout
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:background="@drawable/bg_fab_accent"
                            android:elevation="10dp">

                            <ImageView
                                android:id="@+id/image_view_edit_activity_name_edit_photo"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="?attr/selectableItemBackgroundBorderless"
                                android:clickable="true"
                                android:focusable="true"
                                android:padding="7dp"
                                android:tint="@color/white"
                                app:srcCompat="@drawable/ic_add_a_photo" />
                        </RelativeLayout>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/text_view_name_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:background="@color/kesari"
                        android:gravity="center"
                        android:padding="10dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="Uma Shankar"
                        android:textColor="@color/white"
                        android:textSize="10pt"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/relative_layout_follow"
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="200dp"
                        android:background="@color/white">

                        <TextView
                            android:id="@+id/text_view_follow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Follow"
                            android:textAlignment="center"
                            android:textColor="@color/primary_text"
                            android:textSize="6pt"
                            android:textStyle="bold" />
                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_input_name"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_lang_1"
                            android:hint="@string/hint_name"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="@color/yellow"
                            android:textColorHint="#000000" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_lang_2"
                            android:hint="@string/hint_email"
                            android:textColorHint="#000000"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_input_layout_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_input_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_lang_3"
                            android:hint="@string/hint_facebook"
                            android:textColorHint="#000000"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_input_layout_twitter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_input_twitter"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_lang_6"
                            android:hint="@string/hint_twitter"
                            android:textColorHint="#000000"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_input_layout_instragram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:theme="@style/textview_login">

                        <EditText
                            android:id="@+id/edit_input_instragram"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/bg_lang_5"
                            android:hint="@string/hint_instragram"
                            android:textColorHint="#000000"
                            android:inputType="textEmailAddress"
                            android:padding="10dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/edit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/kesari"
                        android:elevation="1dp"
                        android:padding="16dp"
                        android:text="@string/save"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>